--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/cloudinary": "^3.1.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
