add uploaded photos gallery

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/cloudinary": "^3.1.0",
     "nuxt": "^3.13.0",
+    "nuxt-storage": "^1.2.2",
     "vue": "latest",
     "vue-router": "latest"
   }
